# xteam

./: .gitignore  README.md
Application/mysql/: connectpool.h  dbInterface.h
NetworkProgram/: cache.cc  cache.h
NetworkProgram/TimerManager/: main.cc
NetworkProgram/timer/: CMakeLists.txt  README.md  TimerManager.h  client.cc  clientdata.cc  clientdata.h  main.cc  net.cc  server.cc  server.h  timerobj.h
NetworkProgram/timerManager/: CMakeLists.txt  Logic.h  global.h  globalExtern.h  interface.h  log.cc  log.h  main.cc  singleton.h  timerContainer.cc  timerContainer.h  timerContainerManager.cc  timerContainerManager.h  timerManager.cc  timerManager.h  timerobj.cc  timerobj.h
NetworkProgram/web/: makefile.pub  set_env.sh
OpenSource/: keepalived.md
OpenSource/Nginx/: README.md  ngx_palloc.c
OpenSource/ProtocolBuffer/: addrBook.proto  build.sh  reader.cc  writer.cc
OpenSource/Redis/: README.md  redis-bitmap-hyperloglog.md  redis-cache-expired.md  redis-cluster.md  redis-conf-scan-keyexpired.md  redis-ds.md  redis-master-slave.md  redis-persistence.md  redis-pubsub-transaction.md  (+2 more)
OpenSource/leveldb/mytest/: CMakeLists.txt  leveldb_test.cc
OpenSource/libzmq/my-dir/my-test/: CMakeLists.txt  README.md  asyncsrv.cc  brokerstateflow.cc  bstarcli.hpp  bstarreactor.cc  bstarsrv.cc  bstarsrv.hpp  durapub.cc  freelancesvr.cc  fullclustersimulation.cc  hwclient.cc  hwserver.cc  localcloudflow.cc  lpclient.cc  mdbroker.cc  mdbroker.hpp  mdbrokerservice.cc  mdbrokerservice.hpp  mdbrokerworker.cc  mdclient_async.cc  mdp.h  mdservicediscovery.cc  mdworker.cc  mdwrkapi.hpp  mtserver.cc  ppqueue.cc  ppworker.cc  rrbroker.cc  rrclient.cc  rrserver.cc  rtdealer.cc  rtreq.cc  syncsub.cc  tasksink.cc  taskvent.cc  taskwork.cc  ticlient.cc  ticlient.hpp  titanic.cc  (+4 more)
OpenSource/libzmq/my-dir/my-test/HA/HA-REQ-REP/: README.md
OpenSource/libzmq/my-dir/my-test/HA/HA-REQ-REP/async-service-oriented-reliable-queue/: mdcliapi_async.hpp  trippingtest.cc
OpenSource/libzmq/my-dir/my-test/HA/HA-REQ-REP/client-reliability/: lpserver.cc
OpenSource/libzmq/my-dir/my-test/HA/HA-REQ-REP/disconnected-reliability/: titanic.cc
OpenSource/libzmq/my-dir/my-test/HA/HA-REQ-REP/primary-backup/: bstarreactor.hpp
OpenSource/libzmq/my-dir/my-test/HA/HA-REQ-REP/queue-distribute/: spworker.cc
OpenSource/libzmq/my-dir/my-test/HA/HA-REQ-REP/service-oriented-reliable-queue/: mdbroker.cc  mdbrokerworker.hpp  mdcliapi.hpp
OpenSource/libzmq/my-dir/my-test/advanced-request-reply-patterns/identity/: identity.cc
OpenSource/libzmq/my-dir/my-test/advanced-request-reply-patterns/router-broker/: lbbroker.cc
OpenSource/libzmq/my-dir/my-test/sockets-patterns/: mspoller.cc  mtserver.cc
OpenSource/libzmq/my-dir/my-test/sockets-patterns/pipeline/: tasksink.cc
OpenSource/libzmq/my-dir/my-test/sockets-patterns/pub-sub/: durasub.cc  psenvpub.cc  psenvsub.cc  sync-pub-sub-start.py
OpenSource/libzmq/my-dir/my-test/sockets-patterns/request-reply/: hwserver.cc  msgqueue.cc  rrserver.cc
OpenSource/muduo/socket4a/: CMakeLists.txt  socket4a.cc
algorithm/: bucket_sort.cc
algorithm/MYSTL/: B-Tree.h  BTree.h  CMakeLists.txt  avlTree.h  bNode.h  binSearchTree.h  binnode.h  bintree.cc  bintree.h  entry.h  graph.cc  graph.h  list.cc  list.h  matrixGraph.h  pq_complHeap.h  pq_test.cc  priorityQueue.h  quadList.h  queue.cc  queue.h  redBlackTree.h  skipList.h  splayTree.h  stack.cc  stack.h  string.h  test.cc  vector.cc  vector.h  散列与优先级队列.md  树.md  线性序列.md
algorithm/algorithm/: CMakeLists.txt
algorithm/algorithm/array/: CMakeLists.txt  array.cc  array.h  minK.cc  minK.h  pub.cc  pub.h  test.cc
algorithm/algorithm/inc/: pub.h
algorithm/algorithm/lib/: pub.cc
algorithm/algorithm/string/: perm.cc  perm.h  string.cc  string.h  test.cc
designPatterns/: CMakeLists.txt  README.md  duckInstance.cc  duckInstance.hpp  singleton.hpp  weather.hpp  weatherDisplay.hpp  weatherStation.cc
其他/: README.md
分布式系统/: README.md
协议/: README.md
存储/: README.md
并发编程/: README.md
开发工具/: linux常用命令.md
开源/: README.md
操作系统/: README.md
数据结构/: README.md
测试调试及优化/: 待验证的问题.md  性能测量工具.md  测试工具.md  编译相关.md  调试工具.md
算法/: README.md
系统设计/: README.md
网络编程/: README.md  cache.cc
网络编程/web/: CMakeLists.txt
网络编程/web/output/htdocs/: home.html
网络编程/web/output/htdocs/gcovdir/: index-sort-f.html
网络编程/web/output/htdocs/gcovdir/webserver/: csapp.c.func-sort-c.html  csapp.c.gcov.html  index.html  main.c.func-sort-c.html  main.c.func.html  main.c.gcov.html  web.c.func.html
网络编程/web/output/htdocs/webserver/: csapp.c.gcov.html  index-sort-l.html  index.html  main.c.func.html  main.c.gcov.html  web.c.func-sort-c.html  web.c.func.html  web.c.gcov.html
网络编程/web/src/: csapp.gcda  csapp.gcno  gmon.out  main.c  main.gcda  main.gcno  parse_conf.c  parse_conf.gcda  parse_conf.gcno  parse_conf.h  web.c  web.c.gcov  web.gcda  web.gcno
网络编程/web/src/conf/: web.conf
网络编程/web/src/htdocs/: index-sort-f.html
网络编程/web/src/htdocs/gcovdir/: index-sort-l.html
网络编程/web/src/htdocs/gcovdir/webserver/: csapp.c.func.html  parse_conf.c.func-sort-c.html  web.c.gcov.html
网络编程/web/src/htdocs/webserver/: csapp.c.func-sort-c.html  csapp.c.func.html  index-sort-f.html  main.c.func-sort-c.html  parse_conf.c.gcov.html
网络编程/web/src/unittest/: ut_main.c  ut_parse_conf.c
网络编程/web/third/cJSON/: cJSON.gcda  cJSON.gcno
网络编程/web/webserver/: csapp.c.gcov  csapp.gcda  csapp.gcno  gmon.out  main.c  main.c.gcov  main.gcda  main.gcno  makefile  output.info  parse_conf.c.gcov  parse_conf.gcda  parse_conf.gcno  parse_conf.h  web.c  web.gcda  web.gcno  web.h
网络编程/web/webserver/config/: web.conf
网络编程/web/webserver/htdocs/: index-sort-l.html
网络编程/web/webserver/htdocs.bak/cgi-bin/: hello_get.py
网络编程/web/webserver/htdocs/cgi-bin/: add.c  index.html
网络编程/web/webserver/htdocs/gcovdir/: index.html
网络编程/web/webserver/htdocs/gcovdir/webserver/: index-sort-f.html  index-sort-l.html  parse_conf.c.func.html  parse_conf.c.gcov.html  web.c.func-sort-c.html
网络编程/web/webserver/htdocs/webserver/: parse_conf.c.func-sort-c.html  parse_conf.c.func.html
设计模式/: README.md
(+728 files in other folders)
