
cmake_minimum_required(VERSION 3.9)

add_definitions("-Wall -g")

add_executable(vector vector.cc)
add_executable(list list.cc)
add_executable(stack stack.cc)
add_executable(queue queue.cc)
add_executable(bintree bintree.cc)
add_executable(graph graph.cc)
add_executable(priority_queue priority_queue.cc)
